# micro-2048

./: .gitignore  001-log.txt  ARCHITECTURE_REFACTOR.md  AUTO_REDIRECT_FIX.md  BOARD_REDIRECT_FIX_FINAL.md  Cargo.toml  DEPLOYMENT.md  INBOX_BATCH_SIZE_FIX.md  LIVE_VIEW_FEATURE.md  NEW_BOARD_UX_IMPROVEMENTS.md  OFFLINE_MODE_DISABLED.md  PHASED_STRESS_TEST_GUIDE.md  PLAYER_COUNT_UPDATE.md  PLAYER_MATCHING_FIX.md  QUICK_START_MANUAL.md  README.md  README_STRESS_TEST.md  REDIRECT_DEBUG_GUIDE.md  REGISTRATION_FIXES_SUMMARY.md  STRESS_TEST_ANALYSIS.md  STRESS_TEST_TROUBLESHOOTING.md  THRESHOLD_FIXES_SUMMARY.md  TYPESCRIPT_FIXES.md  cleaned_log.txt  logs_raw.txt  moves_data.rs  next_steps_decision.md  run_stress_test.sh  show_leaderboard_stats.sh  stress_test_coordinator.py  stress_test_k6.js  temp.js  test_backend_v2.js  test_new_backend.js  test_pagination.md  test_registration_fix.js  test_single_registration.js  test_tournaments.py  test_tournaments_fresh.py  timestamp_improvements.md  (+4 more)
example/: CLAUDE.md  Cargo.toml
example/.serena/: project.yml
example/.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
example/.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md
example/src/: contract.rs  lib.rs  service.rs  service.rs.backup
example/src/api/: graphql_types.rs  mod.rs
example/src/api/helpers/: calculation_helpers.rs  mod.rs
example/src/api/mutations/: admin_mutations.rs  config_mutations.rs  game_mutations.rs  mod.rs  moderation_mutations.rs  player_mutations.rs
example/src/api/queries/: admin_queries.rs  analytics_queries.rs  config_queries.rs  event_queries.rs  game_queries.rs  leaderboard_queries.rs  mod.rs  player_queries.rs
example/src/core/: mod.rs
example/src/core/domain/: game_service.rs  leaderboard_service.rs  mod.rs  moderation_service.rs  permission_service.rs  player_service.rs  scoring_service.rs
example/src/core/types/: admin.rs  audit.rs  batch.rs  event.rs  game.rs  governance.rs  leaderboard.rs  mod.rs  player.rs  points.rs  scoring.rs  streak.rs
example/src/core/validation/: game_validation.rs  general_validation.rs  mod.rs  player_validation.rs  scoring_validation.rs
example/src/infrastructure/: errors.rs  messages.rs  mod.rs  operations.rs  state.rs.backup  time_utils.rs
example/src/infrastructure/handlers/: mod.rs  traits.rs
example/src/infrastructure/state/: admin_state.rs  batch_state.rs  event_state.rs  import_export_state.rs  messaging_state.rs  mod.rs  player_state.rs  utility_state.rs
example/src/tests/: mod.rs
example/src/tests/core/: game_tests.rs  mod.rs  moderation_tests.rs  player_tests.rs  scoring_tests.rs  (+1 more)
example/tests/: basic_integration_tests.rs  integration_tests.rs
example/tests/integration/: contract_deployment.rs  cross_chain_messaging.rs  data_integration_tests.rs  mod.rs  player_operations.rs  timestamp_operations.rs
example/tests/unit/: player_validation_test.rs
(+401 files in other folders)
