[package]
name = "game2048"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
linera-sdk = "0.14.1"
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
log = "0.4.22"
env_logger = "0.11.5"
sha2 = "0.10.6"

[dev-dependencies]
linera-sdk = { version = "0.14.1", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "game2048_contract"
path = "src/minimal_contract.rs"

[[bin]]
name = "game2048_service"
path = "src/minimal_service.rs"

[[bin]]
name = "precompute_moves"
path = "scripts/precompute_moves.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'