[package]
name = "game2048"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
linera-sdk = "^0.15.4"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
async-trait = "0.1"
regex = "1.0"
sha2 = "0.10"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
linera-sdk = { version = "^0.15.4", features = ["wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "game2048_contract"
path = "src/contract.rs"

[[bin]]
name = "game2048_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
